test/invalid-syntax/58215_outOfBounds/outOfBounds.agu
-- Author: 58215, Manuel Lourenço

let main : Unit =
    let a : Int[]] = new Int[2 | 0];
    print(a[7])